--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,17 @@ repository: Git repository where your resume will be hosted, only required if yo
 version: 2
 
 # Personal info
-name: Your Name
-title: Your job title
-email: Your email (optional)
+name: Eduardo 
+title: Ochoa Sesma
+email: eduardoochoaacorella@gmail.com
 # email_title: Email (Email title override)
 phone: Your phone number (optional)
 # phone_title: Phone (Phone title override)
-website: Your website (eg. https://google.com)(optional)
+# website: Your website (eg. https://google.com)(optional)
 # website_title: Web (Website title override)
 
 # Dark Mode (true/false/never)
-darkmode: false
+darkmode: true
 
 # Social links
 twitter_username: sesma_ochoa
@@ -25,7 +25,7 @@ twitter_username: sesma_ochoa
 #dribbble_username: jekyll
 #facebook_username: jekyll
 #flickr_username: jekyll
-#instagram_username: jekyll
+instagram_username: sesmaochoa
 linkedin_username: eduardo-ochoa-sesma
 #xing_username: jekyll
 #pinterest_username: jekyll
@@ -34,10 +34,10 @@ linkedin_username: eduardo-ochoa-sesma
 #orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-additional_links:
-- title: Link name
-  icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
-  url: Link url (eg. https://google.com)
+#additional_links:
+#- title: Link name
+ # icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
+  #url: Link url (eg. https://google.com)
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url: Link url (eg. https://google.com)
@@ -52,65 +52,64 @@ additional_links:
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hola soy Eduardo
-
-  You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
-    - Lists
-    - Tables
-    - <a href="google.com">Links</a>
-    - Images ![alt text](/images/landscape-trees.jpg "Trees")
-
+  Hola soy Eduardo, programador CNC. // Hey I'm Eduardo, I'm CNC programmer
 content:
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: Project name
-        link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-        link_text: Link Text
-        additional_links:
-          - title:  Github page for project (eg. sproogen/modern-resume-theme)
-            icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-          - title:  Github page for project (eg. sproogen/modern-resume-theme)
-            icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-        quote: >
-          Short overview of the project (optional)
+        title: Bussiness CNC
+        # link:
+        link_text: 
+         # aditional_links:
+          - # title:  Github page for project (eg. sproogen/modern-resume-theme)
+            # icon: fab fa-github
+            # url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+
+        # quote: >
+          
         description: | # this will include new lines to allow paragraphs
-          Description about the work on/with the project
-  - title: Experience
+         
+  - title: Experiencia
     layout: list
     content:
       - layout: right
-        title: Company name
-        sub_title: Job title
-        caption: Date Range (eg. November 2016 - present)
-        link: Link to company (optional)
+        title: Suministros eléctricos Gabyl SA
+        sub_title: Operario
+        caption:   Junio 2019 - Septiembre 2019
+        link: https://www.gabyl.com/
         quote: >
-          Short description of the company (optional)
-        description: | # this will include new lines to allow paragraphs
-          Description of role
-  - title: Education
+         
+         description: | # this will include new lines to allow paragraphs
+         Montaje de piezas electrónicas para muebles refrigerados
+          - layout: right
+        title: ZF Aftermarket Ibérica S.L. Corella
+        sub_title: Operario
+        caption:   Junio 2018 - Octubre 2018
+        link: https://www.zf.com/mobile/en/homepage/homepage.html
+        quote: >
+         
+         description: | # this will include new lines to allow paragraphs
+         Montaje de accesorios para pastillas de freno.
+  - title: Educacion
     layout: list
     content:
       - layout: top-right
-        title: Institution name
-        sub_title: Qualifications (eg. BA Performing Arts)
-        caption: Date Range (eg. 2016 - 2019)
-        quote: >
-          Short institution or course description (optional)
+        title: CIP ETI Tudela 
+        sub_title: G. Superior
+        caption: 2020 - actual
+        quote: > 
+          Programación en la producción Mecánica 
         description: | # this will include new lines to allow paragraphs
-          Description of qualification
-  - title: A Little More About Me
+          Programación de CNC en todo tipo de maquinas, más concretamente de fresadora y torno. 
+  - title: Acerca de mi
     layout: text
     content: | # this will include new lines to allow paragraphs
-      This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
-
-      Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
-
+      * Entrenador de un equipo de balonmano durante 2 años consecutivos. **GDM La Merced**
+      Participación en excavaciones arqueológicas, siendo parte del equipo de fotografía en *Baelo Claudia Tarifa (Cádiz)*.
+     
 # Footer
-footer_show_references: true
+footer_show_references: false
 # references_title: References on request (Override references text)
 
 # Build settings
