--- a/_config.yml
+++ b/_config.yml
@@ -77,21 +77,21 @@ content:
         title: Suministros eléctricos Gabyl SA
         sub_title: Operario
         caption:   Junio 2019 - Septiembre 2019
-        link: https://www.gabyl.com/
-        quote: >
+        link: [Página oficial](https://www.gabyl.com/)
+        # quote: >
          
          description: | # this will include new lines to allow paragraphs
          Montaje de piezas electrónicas para muebles refrigerados
-          - layout: right
+      - layout: right
         title: ZF Aftermarket Ibérica S.L. Corella
         sub_title: Operario
         caption:   Junio 2018 - Octubre 2018
-        link: https://www.zf.com/mobile/en/homepage/homepage.html
-        quote: >
+        link: [Página oficial](https://www.zf.com/mobile/en/homepage/homepage.html)
+        # quote: >
          
          description: | # this will include new lines to allow paragraphs
          Montaje de accesorios para pastillas de freno.
-  - title: Educacion
+  - title: Educación
     layout: list
     content:
       - layout: top-right
