--- a/_config.yml
+++ b/_config.yml
@@ -10,13 +10,13 @@ name: Eduardo
 title: Ochoa Sesma
 email: eduardoochoaacorella@gmail.com
 # email_title: Email (Email title override)
-phone: Your phone number (optional)
+# phone: Your phone number (optional)
 # phone_title: Phone (Phone title override)
 # website: Your website (eg. https://google.com)(optional)
 # website_title: Web (Website title override)
 
 # Dark Mode (true/false/never)
-darkmode: true
+darkmode: false
 
 # Social links
 twitter_username: sesma_ochoa
