--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ linkedin_username: eduardo-ochoa-sesma
 # Google Analytics and Tag Manager
 # Using more than one of these may cause issues with reporting
 # gtm: "GTM-0000000"
-gtag: "G-2KH4CVPZP3"
+# gtag: "G-2KH4CVPZP3"
 # google_analytics: "UA-00000000-0"
 
 # About Section
